fix overflow divSearch

--- a/searchBar/css/autocomplete.css
+++ b/searchBar/css/autocomplete.css
@@ -35,6 +35,9 @@
         background-color: white;
         border-radius: 8px;
         box-shadow: 0px 1px 8px 1px #00000033;
+        height: 80%;
+        overflow: auto;
+        max-height: 745px;
     }
     #optionSelected{
         display: grid;
@@ -52,6 +55,9 @@
         border-radius: 8px;
         box-shadow: 0px 1px 8px 1px #00000033;
         background-color: white;
+        height: 80%;
+        overflow: auto;
+        max-height: 745px;
     }
     #optionSelected{
         display: grid;
